# signetik-iot

signetik_client_rel/: .gitignore  CMakeLists.txt  Kconfig  README.rst  overlay-carrier.conf  prj.conf  signetik_client_rel.yaml
signetik_client_rel/src/: LTE_task.c  LTE_task.h  accel_task.c  accel_task.h  cell_packet.c  cell_packet.h  coap_cbor_device.h  main.c  main_task.c  sigconfig.h  signetik.h  temp_humidity_task.c  temp_humidity_task.h
